fix colors in dark mode

--- a/src/components/home/styles.css
+++ b/src/components/home/styles.css
@@ -2,13 +2,15 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-top: 65px;
+  padding-top: 65px;
+  background-color: var(--primary-background-color);
 }
 
 .home .write{
   display: flex;
   width: 600px;
   background-color: var(--secondary-background-color);
+  color: var(--color);
   padding: 10px;
   border-radius: 10px;
 }
@@ -18,7 +20,7 @@
   height: 40px;
   font-size: 1.8rem;
   border-radius: 50%;
-  background-color: var(--primary-background-color);
+  background-color: var(--third-background-color);
   display: grid;
   place-content: center;
   margin-right: 10px;
@@ -36,7 +38,7 @@
 
 @media (width < 1024px) {
   .home {
-    margin-top: 130px;
+    padding-top: 130px;
   }
 
   .home .write{
@@ -46,7 +48,7 @@
 
 @media (width < 360px){
   .home{
-    margin-top: 145px;
+    padding-top: 145px;
   }
 }
 
